# gr-rdf

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: rdfConfig.cmake
docs/: README.rdf
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  rdf_simple_derivative.xml  rdf_stream-switcher.xml  rdf_stream_switcher.xml  rdf_transition_counter.xml
include/rdf/: CMakeLists.txt  api.h  simple_derivative.h  stream-switcher.h  stream_switcher.h  transition_counter.h
lib/: .stream-switcher_impl.cc.swp  CMakeLists.txt  qa_rdf.cc  qa_rdf.h  simple_derivative_impl.cc  simple_derivative_impl.h  stream-switcher_impl.cc  stream-switcher_impl.h  stream_switcher_impl.cc  stream_switcher_impl.h  test_rdf.cc  transition_counter_impl.cc  transition_counter_impl.h
python/: CMakeLists.txt  __init__.py
swig/: CMakeLists.txt  rdf_swig.i
